--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.container {
+	padding: 0 1rem;
+}
+
+.btn {
+	display: inline-block;
+	border: none;
+	background: #555;
+	color: #fff;
+	padding: 7px 20px;
+	cursor: pointer;
+}
+
+.btn:hover {
+	background: #666;
+}
+
+a {
+	color: white;
+}
